<resources>
    <string name="app_name">玩安卓</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="navigation">导航</string>
    <string name="knowledge_system">体系</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>
    <string name="me">我的</string>
    <string name="exit_tip">再按一次退出程序</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment111</string>
    <string name="hello_blank_fragment2">Hello blank fragment222</string>

    <string name="top_tip">置顶</string>
    <string name="new_fresh">新</string>
    <string name="article_category">分类：%1$s/%2$s</string>
    <string name="collect_category">分类：%1$s</string>
    <string name="article_author">作者：%1$s</string>
    <!--refresh -->
    <string name="srl_header_pulling">下拉可以刷新</string>
    <string name="srl_header_refreshing">正在刷新…</string>
    <string name="srl_header_loading">正在加载…</string>
    <string name="srl_header_release">释放立即刷新</string>
    <string name="srl_header_finish">刷新完成</string>
    <string name="srl_header_failed">刷新失败</string>
    <string name="srl_header_update">上次更新 M-d HH:mm</string>
    <string name="srl_header_secondary">释放进入二楼</string>

    <string name="srl_footer_pulling">上拉加载更多</string>
    <string name="srl_footer_release">释放立即加载</string>
    <string name="srl_footer_loading">正在加载…</string>
    <string name="srl_footer_refreshing">正在刷新…</string>
    <string name="srl_footer_finish">加载完成</string>
    <string name="srl_footer_failed">加载失败</string>
    <string name="srl_footer_nothing">没有更多数据了</string>
</resources>