<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@mipmap/menu_main"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_project"
        android:enabled="true"
        android:icon="@mipmap/menu_project"
        android:title="@string/project"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_square"
        android:enabled="true"
        android:icon="@mipmap/menu_square"
        android:title="@string/square"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_wechat"
        android:enabled="true"
        android:icon="@mipmap/menu_wechat"
        android:title="@string/wechat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_me"
        android:enabled="true"
        android:icon="@mipmap/menu_me"
        android:title="@string/me"
        app:showAsAction="ifRoom" />

</menu>