<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="1dp"
    android:layout_marginTop="1dp"
    app:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_article_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_fresh"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="2dp"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="2dp"
            android:text="@string/top_tip"
            android:textColor="@color/Red"
            android:textSize="10sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_fresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_article_top"
            android:background="@drawable/bg_fresh"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="2dp"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="2dp"
            android:text="@string/new_fresh"
            android:textColor="@color/Red"
            android:textSize="10sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_article_fresh"
            android:background="@drawable/bg_tag"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="2dp"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="2dp"
            android:textColor="#00bcd4"
            android:textSize="10sp"
            android:visibility="gone"
            tools:text="@string/app_name"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_article_top"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_article_tag"
            android:textColor="#616161"
            android:textSize="12sp"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_article_top"
            android:layout_alignParentRight="true"
            android:textColor="#757575"
            android:textSize="12sp"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/iv_article_thumbnail"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_below="@+id/tv_article_author"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_article_author"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/iv_article_thumbnail"
            android:ellipsize="end"
            android:gravity="top|start"
            android:lineSpacingExtra="2dp"
            android:maxLines="2"
            android:paddingBottom="6dp"
            android:textColor="#19191B"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_article_chapterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_article_title"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toRightOf="@+id/iv_article_thumbnail"
            android:gravity="center"
            android:textColor="#757575"
            android:textSize="12sp"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_like_not" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>